objects/ssot__AuthorizationFormConsent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizationFormTextId__c</fullName>
        <label>Authorization Form Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedDateTime__c</fullName>
        <label>Consent Captured Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentCapturedSourceName__c</fullName>
        <label>Consent Captured Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConsentStatusId__c</fullName>
        <label>Consent Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EntityId__c</fullName>
        <label>Entity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AuthorizationFormConsent Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761153576_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationFormConsent_Authorizati_rel</label>
        <referenceTo>ssot__AuthorizationFormText__dlm</referenceTo>
        <relationshipLabel>AuthorizationFormConsent_Authorizati_rel</relationshipLabel>
        <relationshipName>rel_1697761153576_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761153855_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationFormConsent_ConsentStat_rel</label>
        <referenceTo>ssot__ConsentStatus__dlm</referenceTo>
        <relationshipLabel>AuthorizationFormConsent_ConsentStat_rel</relationshipLabel>
        <relationshipName>rel_1697761153855_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761153933_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationFormConsent_EngagementC_rel</label>
        <referenceTo>ssot__EngagementChannelType__dlm</referenceTo>
        <relationshipLabel>AuthorizationFormConsent_EngagementC_rel</relationshipLabel>
        <relationshipName>rel_1697761153933_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>